Fixes home logos being too big (and add opaque underline)

--- a/style.css
+++ b/style.css
@@ -733,7 +733,7 @@ ul.dropdown li a:after {
 	height: 100vh;
 	width: 100%;
 	background-repeat: no-repeat;
-	background-image: url('img/Homelogos.png');
+	background-image: url('img/HomeLogos1.png');
 	background-attachment: fixed;
 	background-size: cover;
 	background-position: top;
